Refactor NPEFixSafe
Signed-off-by: André Silva <andre15andre@hotmail.com>